<resources>
    <string name="app_name">Case Space</string>
    <string name="error_init_binding">Ошибка инициализации биндинга: %s</string>
    <string name="image_of_day">Картина дня</string>
    <string name="wiki_search">Найти в Wiki</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="hd_picture">HD</string>
    <string name="close">Закрыть</string>
    <string name="repeat">Повторить</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="ok">OK</string>
    <string name="themes_choice_title">Выбор темы приложения</string>
    <string name="mars_theme">Тема \"Марс\"</string>
    <string name="default_theme">Тема по-умолчанию</string>
    <string name="emerald_theme">Тема \"Изумруд\"</string>
    <string name="apply">Применить</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="path_video_preview">https://img.youtube.com/vi/%s/0.jpg</string>
    <string name="picture_of_day">Картинка дня</string>
    <string name="cancel">Отмена</string>
    <string name="close_app_permission_title">Не получены требуемые разрешения!</string>
    <string name="close_app_permission_message">Для нормальной работы приложения тебуется выдача следующих разрешений:\n 1. Определение локации.\n</string>
    <string name="locate_request_permission_title">Доступ к локации</string>
    <string name="locate_request_permission_text">Для получения данных по фото земли необходимо предоставить разрешение на определение вашего местоположения.</string>
    <string name="no_gps">Не включен GPS!</string>
    <string name="mars_rover">Марсоход</string>
    <string name="mars_rover_name_title">Название марсохода</string>
    <string name="mars_rover_landing_title">Дата посадки</string>
    <string name="mars_rover_photos_title">Снято фото</string>
    <string name="notes">Заметки</string>
    <string name="add_note">Добавить заметку</string>
    <string name="title">Название</string>
    <string name="note">Текст заметки</string>
    <string name="save">Сохранить</string>
    <string name="list_begin">Начало списка</string>
    <string name="end_list">Конец списка</string>
</resources>