<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_view_padding"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_choice_themes"
        style="@style/SettingCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themes_choice_title"
                app:layout_constraintBottom_toTopOf="@id/themes_choice_group"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/themes_choice_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_theme_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_theme"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_theme_emerald"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emerald_theme"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_theme_mars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mars_theme"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button.Confirm"
                android:layout_gravity="center"
                android:text="@string/apply"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>